Blender crash when moving playhead in VSE #88237

Closed
opened 2021-05-12 19:39:40 +02:00 by Matias Mendiola · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crash when moving playhead in VSE over an scene strip

Exact steps for others to reproduce the error
Open the provided file and move the playhead over the first strip in the VSE. Blender crash

VSE_crash.zip

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crash when moving playhead in VSE over an scene strip **Exact steps for others to reproduce the error** Open the provided file and move the playhead over the first strip in the VSE. Blender crash [VSE_crash.zip](https://archive.blender.org/developer/F10088493/VSE_crash.zip)
Author
Member

Added subscriber: @mendio

Added subscriber: @mendio

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed in Windows 10. The crash looks related to Sound (AUD).

Here is the crash report.

VSE_crash.crash.txt

I have tested in 2.93 and 3.0. It looks the error is when you move the playhead and release the mouse button.

Also noticed that running the example in Debug mode, I get an Assert in BLI_assert(id->session_uuid != MAIN_ID_SESSION_UUID_UNSET);

Confirmed in Windows 10. The crash looks related to Sound (AUD). Here is the crash report. [VSE_crash.crash.txt](https://archive.blender.org/developer/F10088506/VSE_crash.crash.txt) I have tested in 2.93 and 3.0. It looks the error is when you move the playhead and release the mouse button. Also noticed that running the example in Debug mode, I get an Assert in `BLI_assert(id->session_uuid != MAIN_ID_SESSION_UUID_UNSET);`

Added subscriber: @iss

Added subscriber: @iss

Can confirm this file crashing at least from 2.90. This seems to be some deeper issue in dependency graph.

Can confirm this file crashing at least from 2.90. This seems to be some deeper issue in dependency graph.

Added subscriber: @nellysanchez594

Added subscriber: @nellysanchez594

Removed subscriber: @nellysanchez594

Removed subscriber: @nellysanchez594

This is caused by prefetch, that doesn't see scene strip because of effect and tries to render scene strip, which fails.
I think this is because prefetch uses dependency graph for rendering with own evaluated scene and render job can't build it's own dependency graph from this data.

I can fix this case quickly, but inability of prefetch to render scene strips is not only inconvinient, but seems also quite high maintenance so it may be worth fixing this aspect.

@mendio If this issue is preventing work to be done, you can disable prefetching in sequencer. If you want to use prefetch, you can use patch D11247.

This is caused by prefetch, that doesn't see scene strip because of effect and tries to render scene strip, which fails. I think this is because prefetch uses dependency graph for rendering with own evaluated scene and render job can't build it's own dependency graph from this data. I can fix this case quickly, but inability of prefetch to render scene strips is not only inconvinient, but seems also quite high maintenance so it may be worth fixing this aspect. @mendio If this issue is preventing work to be done, you can disable prefetching in sequencer. If you want to use prefetch, you can use patch [D11247](https://archive.blender.org/developer/D11247).
Author
Member

Thanks @iss . For the record, I found yesterday a workaround that solve the problem making a full copy of the edit scene, you can try that with the sample file.
This way everything start working again without crashes, Maybe this could help to found the issue.

Thanks @iss . For the record, I found yesterday a workaround that solve the problem making a full copy of the edit scene, you can try that with the sample file. This way everything start working again without crashes, Maybe this could help to found the issue.

Added subscriber: @kevinkelly

Added subscriber: @kevinkelly

This comment was removed by @kevinkelly

*This comment was removed by @kevinkelly*

This issue was referenced by a57ba4147f

This issue was referenced by a57ba4147f1344e9379a271fc752036969574a2d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-08-24 01:00:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88237
No description provided.